--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "morgan": "~1.9.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "prisma": "^4.11.0",
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.21",
+    "prisma": "^4.11.0",
+    "postinstall": "prisma generate"
   }
 }
