--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^4.11.0",
@@ -24,7 +25,6 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.21",
-    "prisma": "^4.11.0",
-    "postinstall": "prisma generate"
+    "prisma": "^4.11.0"
   }
 }
