--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "type": "module",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js",
+    "dev": "npx prisma format && npx prisma migrate dev --name dev && nodemon app.js",
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^4.11.0",
+    "@prisma/client": "^4.12.0",
     "bcrypt": "^5.1.0",
     "connect-redis": "^7.0.1",
     "cookie-parser": "~1.4.4",
@@ -27,6 +27,6 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.21",
-    "prisma": "^4.11.0"
+    "prisma": "^4.12.0"
   }
 }
