--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
+    "@socket.io/admin-ui": "^0.5.1",
     "bcrypt": "^5.1.0",
     "connect-redis": "^7.0.1",
     "cookie-parser": "~1.4.4",
@@ -17,6 +18,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
+    "helmet": "^6.0.1",
     "http-errors": "~1.6.3",
     "ioredis": "^5.3.1",
     "jsonwebtoken": "^9.0.0",
