--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ioredis": "^5.3.1",
     "jsonwebtoken": "^9.0.0",
     "morgan": "~1.9.1",
+    "nanoid": "^4.0.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "socket.io": "^4.6.1"
