--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node app.js",
+    "redis-start": "redis-start",
+    "start": "concurrently \"npm run redis-start\" \"npx prisma format && npx prisma migrate dev --name dev && node app.js\" ",
     "dev": "npx prisma format && npx prisma migrate dev --name dev && nodemon app.js",
     "postinstall": "prisma generate"
   },
@@ -12,6 +13,7 @@
     "@prisma/client": "^4.12.0",
     "@socket.io/admin-ui": "^0.5.1",
     "bcrypt": "^5.1.0",
+    "concurrently": "^8.0.1",
     "connect-redis": "^7.0.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -26,6 +28,7 @@
     "nanoid": "^4.0.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "redis": "^4.6.5",
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
